--- a/css/chamada.css
+++ b/css/chamada.css
@@ -1,32 +1,37 @@
-.chamada {
-  background-image: url(../css/img/portrait-man-with-glasses-virtual-reality-vr-interacts-with-virtual-screen\ 1.png);
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 52.125rem;
-  background-size: cover;
-  /* padding-top: 23.6875rem;
-  padding-left: 5.625rem; */
+@media (min-width: 768px) {
+  .chamada__teste {
+    background-image: url(../css/img/portrait-man-with-glasses-virtual-reality-vr-interacts-with-virtual-screen\ 1.png);
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 834px;
+    background-size: cover;
+  }
 }
-
+.box {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1260px;
+  display: flex;
+  flex-direction: column;
+}
 .chamada__titulo {
-  font-size: 4.1875rem;
-  padding-top: 15.0625rem;
-  margin-left: 5.625rem;
+  font-size: 4.18rem;
+  padding-top: 241px;
+  display: flex;
 }
 .chamada__subtitulo {
-  font-size: 1.3125rem;
-  margin-left: 5.625rem;
-  margin-top: 2rem;
+  font-size: 1.31rem;
+
+  margin-top: 32px;
 }
 .chamada__botao--link {
-  font-size: 1.3125rem;
+  font-size: 1.31rem;
   font-weight: 700;
   background-color: var(--rosa-intermediario);
-  width: 11.25rem;
-  height: 3.125rem;
+  width: 180px;
+  height: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 3.25rem;
-  margin-left: 5.625rem;
+  margin-top: 52px;
 }
