--- a/css/informacoes.css
+++ b/css/informacoes.css
@@ -1,31 +1,35 @@
 .informacoes {
   background-color: var(--light);
   color: var(--black);
+  padding-top: 48px;
   width: 100%;
-  height: 22.4375rem;
   display: flex;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .informacoes__sobre {
-  font-size: 4.1875rem;
-  margin-top: 3rem;
+  font-size: 4.18rem;
   font-weight: 700;
+  font-family: Source Sans Pro, sans-serif;
 }
 .informacoes__texto {
   font-size: 1.75rem;
   margin-top: 31px;
+  display: flex;
+  text-align: center;
 }
 .informacoes__botao--link {
-  font-size: 1.3125rem;
+  font-size: 1.31rem;
   color: var(--purple);
   border: solid 1px var(--purple);
-  padding: 1rem;
-  padding-right: 2rem;
-  padding-left: 2rem;
+  width: 180px;
+  height: 50px;
   font-family: "Source Code Pro", monospace;
   font-weight: 700;
-  line-height: 26px;
-  line-height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin-top: 48px;
+  margin-bottom: 48px;
 }
