--- a/css/chamada.css
+++ b/css/chamada.css
@@ -18,6 +18,7 @@
   font-size: 4.18rem;
   padding-top: 241px;
   display: flex;
+  font-weight: 700;
 }
 .chamada__subtitulo {
   font-size: 1.31rem;
