--- a/css/formulario.css
+++ b/css/formulario.css
@@ -6,7 +6,6 @@
 .formulario {
   width: 100%;
   height: 310px;
-  margin-bottom: 534px;
   display: flex;
   flex-direction: column;
 }
@@ -27,10 +26,8 @@
 .formulario__texto {
   padding-top: 80px;
   color: var(--verde-claro);
-
   margin-bottom: 32px;
-  font-family: Source Sans Pro, sans-serif;
-  font-weight: 400px;
+  font-weight: 400;
   font-size: 2.375rem;
 }
 .formulario__itens-input {
@@ -42,6 +39,7 @@
   display: flex;
   margin-top: 16px;
   padding: 16px;
+  font-family: "Source Serif Pro", serif;
 }
 
 .formulario__itens-conte {
@@ -67,4 +65,5 @@
   padding-top: 16px;
   padding-bottom: 16px;
   background-color: var(--black);
+  font-family: "Source Serif Pro", serif;
 }
