--- a/css/base.css
+++ b/css/base.css
@@ -23,5 +23,7 @@ body {
   font-family: "Source Sans Pro", sans-serif;
   font-size: 16px;
   color: var(--light);
-  margin-bottom: 534px;
+}
+main {
+  padding-bottom: 534px;
 }
