--- a/css/form.css
+++ b/css/form.css
@@ -1,21 +1,16 @@
-.container__formulario {
+.form {
+  width: min-content;
+  display: flex;
+  flex-direction: column;
   margin: 0 auto;
-  display: flex;
-  flex-direction: column;
 }
-.formulario {
-  width: 100%;
-  height: 310px;
-  display: flex;
-  flex-direction: column;
-}
-.formulario__container {
+.form__container {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 198px;
 }
-.formulario__itens {
+
+.form__box {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,14 +18,14 @@
   margin-top: 32px;
   margin-right: 16px;
 }
-.formulario__texto {
+.form__title {
   padding-top: 80px;
   color: var(--verde-claro);
   margin-bottom: 32px;
   font-weight: 400;
   font-size: 2.375rem;
 }
-.formulario__itens-input {
+.input {
   background-color: var(--verde-claro);
   border-radius: 10px;
   width: 396px;
@@ -42,18 +37,17 @@
   font-family: "Source Serif Pro", serif;
 }
 
-.formulario__itens-conte {
+.input--text {
   background-color: var(--verde-claro);
   width: 416px;
   height: 176px;
   border-radius: 10px;
   margin-top: 16px;
   margin-bottom: 16px;
-  padding-bottom: 144px;
-  padding-top: 16px;
-  padding-left: 16px;
+  resize: none;
+  padding: 16px;
 }
-.formulario__botao {
+.form__button {
   width: 414px;
   height: 48px;
   border: solid 1px var(--verde-claro);
