--- a/css/banner.css
+++ b/css/banner.css
@@ -1,5 +1,11 @@
 .banner {
-  background-image: url(../css/img/portrait-man-with-glasses-virtual-reality-vr-interacts-with-virtual-screen\ 1.png);
+  background-image: linear-gradient(
+      93.79deg,
+      #000000 7.22%,
+      rgba(0, 0, 0, 0) 71.39%
+    ),
+    url(../css/img/background-banner.webp);
+
   background-repeat: no-repeat;
   width: 100%;
   height: 834px;
@@ -14,20 +20,20 @@
   flex-direction: column;
 }
 .banner__box--title {
-  font-size: 4.18rem;
+  font-size: 6.7rem;
   padding-top: 241px;
   display: flex;
   font-weight: 700;
 }
 .banner__box--subtitle {
-  font-size: 1.31rem;
+  font-size: 2.1rem;
 
   margin-top: 32px;
 }
 .banner__box--link {
-  font-size: 1.31rem;
+  font-size: 2.1rem;
   font-weight: 700;
-  background-color: var(--rosa-intermediario);
+  background-color: var(--secondary);
   width: 180px;
   height: 50px;
   display: flex;
