--- a/css/header.css
+++ b/css/header.css
@@ -3,7 +3,7 @@
   color: var(--light);
   align-items: center;
   width: 100%;
-  font-size: 1.31rem;
+  font-size: 2.1rem;
   height: 103px;
 }
 
@@ -33,9 +33,14 @@
   list-style-type: none;
   display: flex;
   justify-content: space-between;
+  font-size: 2.1rem;
   margin-right: 32px;
-  font-size: 1.31rem;
 }
+
+.menu__box--item:last-child {
+  margin-right: 0px;
+}
+
 .menu__box {
   display: flex;
   width: 100%;
@@ -43,7 +48,7 @@
   align-items: center;
 }
 .menu__button {
-  background-color: var(--verde-intermediario);
+  background-color: var(--primary);
   width: 180px;
   height: 50px;
   display: flex;
