--- a/css/subscribe.css
+++ b/css/subscribe.css
@@ -1,6 +1,6 @@
 .subscribe {
   background-color: var(--light);
-  color: var(--black);
+  color: var(--dark);
   padding-top: 48px;
   width: 100%;
   display: flex;
@@ -9,19 +9,19 @@
   justify-content: center;
 }
 .subscribe__title {
-  font-size: 4.18rem;
+  font-size: 6.7rem;
   font-weight: 700;
 }
 .subscribe__description {
-  font-size: 1.75rem;
+  font-size: 2.8rem;
   margin-top: 31px;
   display: flex;
   text-align: center;
 }
 .subscribe__button {
-  font-size: 1.31rem;
-  color: var(--purple);
-  border: solid 1px var(--purple);
+  font-size: 2.1rem;
+  color: var(--secondary-dark);
+  border: solid 1px var(--secondary-dark);
   width: 180px;
   height: 50px;
   font-weight: 700;
