--- a/css/banner.css
+++ b/css/banner.css
@@ -1,5 +1,10 @@
 .banner {
-  background-image: url(../css/img/portrait-man-with-glasses-virtual-reality-vr-interacts-with-virtual-screen\ 1.png);
+  background-image: linear-gradient(
+      93.79deg,
+      #000000 7.22%,
+      rgba(0, 0, 0, 0) 71.39%
+    ),
+    url(../css/img/background-banner.webp);
   background-repeat: no-repeat;
   width: 100%;
   height: 834px;
@@ -14,26 +19,17 @@
   flex-direction: column;
 }
 .banner__box--title {
-  font-size: 4.18rem;
   padding-top: 241px;
   display: flex;
-  font-weight: 700;
 }
 .banner__box--subtitle {
-  font-size: 1.31rem;
-
   margin-top: 32px;
 }
-.banner__box--link {
-  font-size: 1.31rem;
-  font-weight: 700;
-  background-color: var(--rosa-intermediario);
-  width: 180px;
-  height: 50px;
+.banner__button--link {
+  background-color: var(--secondary);
   display: flex;
   align-items: center;
   justify-content: center;
   margin-top: 52px;
-  color: inherit;
-  border: none;
+  color: var(--light);
 }
