--- a/css/info.css
+++ b/css/info.css
@@ -22,7 +22,7 @@
   justify-content: space-around;
   align-items: center;
   margin-top: 80px;
-  background-color: var(--black);
+  background-color: var(--dark);
   width: 100%;
   height: 650px;
   margin-right: 36px;
@@ -38,18 +38,17 @@
   align-items: center;
 }
 .info__title {
-  color: var(--purple);
-  font-weight: 700;
-  font-size: 2.375rem;
+  color: var(--secondary-dark);
   margin-top: 169px;
   display: flex;
   justify-content: center;
   text-align: center;
+  font-weight: 700;
 }
 
 .info__description {
   font-family: "Source Serif Pro", serif;
-  color: var(--purple);
+  color: var(--secondary-dark);
   text-align: center;
   width: 216px;
   height: 355px;
