--- a/css/subscribe.css
+++ b/css/subscribe.css
@@ -1,6 +1,6 @@
 .subscribe {
   background-color: var(--light);
-  color: var(--black);
+  color: var(--dark);
   padding-top: 48px;
   width: 100%;
   display: flex;
@@ -8,23 +8,17 @@
   align-items: center;
   justify-content: center;
 }
-.subscribe__title {
-  font-size: 4.18rem;
-  font-weight: 700;
-}
+
 .subscribe__description {
-  font-size: 1.75rem;
   margin-top: 31px;
   display: flex;
   text-align: center;
 }
 .subscribe__button {
-  font-size: 1.31rem;
-  color: var(--purple);
-  border: solid 1px var(--purple);
-  width: 180px;
-  height: 50px;
-  font-weight: 700;
+  font-size: 2.1rem;
+  color: var(--secondary-dark);
+  border: solid 1px var(--secondary-dark);
+
   display: flex;
   align-items: center;
   justify-content: center;
