--- a/css/subscribe.css
+++ b/css/subscribe.css
@@ -18,7 +18,7 @@
   font-size: 2.1rem;
   color: var(--secondary-dark);
   border: solid 1px var(--secondary-dark);
-
+  background-color: transparent;
   display: flex;
   align-items: center;
   justify-content: center;
