--- a/css/banner.css
+++ b/css/banner.css
@@ -33,3 +33,32 @@
   margin-top: 52px;
   color: var(--light);
 }
+@media screen and (max-width: 480px) {
+  .banner {
+    background-image: none;
+    height: auto;
+    padding-bottom: 100px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+  .banner__box {
+    /* max-width: 480px; */
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+  .banner__box--title {
+    text-align: center;
+    justify-content: center;
+    width: 100%;
+  }
+  .banner__box--subtitle {
+    text-align: center;
+    justify-content: center;
+    width: 100%;
+  }
+  .banner__box--title {
+    padding-top: 150px;
+  }
+}
