--- a/css/base.css
+++ b/css/base.css
@@ -83,3 +83,38 @@ button {
   justify-content: center;
   align-items: center;
 }
+
+@media screen and (max-width: 480px) {
+  h1 {
+    font-size: 5.3rem;
+  }
+  h2 {
+    font-size: 3.8rem;
+  }
+  h3 {
+    font-size: 3.2rem;
+  }
+  h4 {
+    font-size: 2.7rem;
+  }
+  h5 {
+    font-size: 2rem;
+  }
+  h6 {
+    font-size: 1.6rem;
+  }
+  p {
+    font-size: 1.2rem;
+  }
+  button {
+    width: 150px;
+    height: 50px;
+    font-size: 1.8rem;
+    font-weight: 500;
+  }
+  body {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+}
