--- a/css/info.css
+++ b/css/info.css
@@ -12,7 +12,7 @@
   align-items: center;
   background-color: var(--light);
   width: 288px;
-  height: 650px;
+  height: auto;
   overflow: hidden;
   text-overflow: ellipsis;
 }
@@ -24,13 +24,13 @@
   margin-top: 80px;
   background-color: var(--dark);
   width: 100%;
-  height: 650px;
-  margin-right: 36px;
+  height: auto;
+  /* margin-right: 36px; */
 }
 
 .info__img {
-  height: 50px;
-  width: 50px;
+  max-height: 50px;
+  max-width: 50px;
   margin-top: 68px;
   margin-bottom: 68px;
   display: flex;
@@ -53,8 +53,46 @@
   width: 216px;
   height: 355px;
   max-width: 216px;
-  max-height: 355px;
+  /* max-height: 355px; */
   font-weight: 400;
   margin-top: 40px;
-  margin-bottom: 48px;
+}
+@media screen and (max-width: 480px) {
+  .info__container {
+    flex-direction: column;
+    /* height: auto; */
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 350px;
+    margin: 0px;
+  }
+  .info__card {
+    height: 350px;
+    margin-bottom: 50px;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .info__card:last-child {
+    margin-bottom: 0px;
+  }
+  .info {
+    margin-top: 50px;
+  }
+  .info__img {
+    display: none;
+    margin: 0px;
+  }
+  .info__description {
+    margin-top: 20px;
+    display: flex;
+    height: auto;
+    align-items: center;
+    justify-content: center;
+  }
+  .info__title {
+    margin-top: 0px;
+  }
 }
